syntax = "proto3";

package example.corner_cases;

option go_package = "github.com/casnerano/protoc-gen-go-guard/example/pb/corner_cases";

import "google/protobuf/empty.proto";
import "proto/guard.proto";

service PolicyBasedAccess {
  rpc EmptyPoliciesWithAnyRequirement(google.protobuf.Empty) returns (google.protobuf.Empty) {
    option (guard.method_rules) = {
      authenticated_access: {
        policy_based: {
          policies: [],
          match: AT_LEAST_ONE
        }
      }
    };
  };

  rpc EmptyPoliciesWithAllRequirement(google.protobuf.Empty) returns (google.protobuf.Empty) {
    option (guard.method_rules) = {
      authenticated_access: {
        policy_based: {
          policies: [],
          match: ALL
        }
      }
    };
  };

  rpc MultiplePoliciesWithAnyRequirement(google.protobuf.Empty) returns (google.protobuf.Empty) {
    option (guard.method_rules) = {
      authenticated_access: {
        policy_based: {
          policies: ["policy1", "policy2"],
          match: AT_LEAST_ONE
        }
      }
    };
  };

  rpc MultiplePoliciesWithAllRequirement(google.protobuf.Empty) returns (google.protobuf.Empty) {
    option (guard.method_rules) = {
      authenticated_access: {
        policy_based: {
          policies: ["policy1", "policy2"],
          match: ALL
        }
      }
    };
  };
}